--- a/source/Theme.csproj
+++ b/source/Theme.csproj
@@ -80,6 +80,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="theme.yaml" />
+    <None Include="theme.yaml.old" />
     <None Include="thememodifier.yaml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
